--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
- <title>Testing git.io</title>
+ <title>lebllex_github.io</title>
 </head>
 <body>
-    <br>Test github IO</br>
+    <br>Hi I`m Alexei Belyev this is my github.io</br>
+    <br>Currently i`m part of group making SCADA for grain industry </br>
 </body>
 </html>
