--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
- <link rel="stylesheet" type="text/css" href="assets/css/style.scss">
+ <link rel="stylesheet" type="text/css" href="assets/css/style.css">
  <title>lebllex_github.io</title>
 </head>
 <body>
