--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <div class="parallax"></div>
 
-    <div style="height:800px;background-color:brown;font-size:36px">
+    <div style="height:800px;background-color:hsl(0, 100%, 90%);font-size:36px">
     <br>Hi I`m Alexei Belyev this is my github.io</br>
     <br>Currently i`m part of group making SCADA for grain industry </br>
     </div>
